--- a/SistemaGastosPersonales/My Project/Resources.resx
+++ b/SistemaGastosPersonales/My Project/Resources.resx
@@ -148,4 +148,7 @@
   <data name="cerrar_ojo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cerrar_ojo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="boton_eliminar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\boton-eliminar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
